--- a/Primer trimestre/html/personal.html
+++ b/Primer trimestre/html/personal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentación</title>
     <link rel="stylesheet" href="estilopersonal.css">
-    <script src="personal.js"></script>
+    
 </head>
 <body>
     <h1>Julio Avello Ordóñez</h1>
@@ -13,8 +13,8 @@
     <div id="caja">
         <p id="primero">Soy un estudiante muy joven, por eso no dire mi edad.</p>
         <p>Sin embargo adjuntare una imagen de un amigo que nació más o menos por la misma epoca que yo <button id="botonaco">Pulsame</button></p>
-        <p><img id="imagen" src="imagenes/yisus.jpeg" alt="jesus"></p>
+        <p><img id="foto" src="imagenes/yisus.jpeg" alt="jesus"></p>
     </div>
-    
+    <script src="personal.js"></script>
 </body>
 </html>
