--- a/Primer trimestre/Artista/artista.html
+++ b/Primer trimestre/Artista/artista.html
@@ -12,27 +12,31 @@
             <h1>Chicho Sánchez Ferlosio</h1>
         </header>  
         <nav>
-            <a href="https://es.wikipedia.org/wiki/Chicho_S%C3%A1nchez_Ferlosio" target="_blank">Biografía</a>
-            <a href="https://www.discogs.com/es/artist/656292-Chicho-S%C3%A1nchez-Ferlosio" target="_blank">Discografía</a>
-            <a href="https://www.casadellibro.com/libros-ebooks/chicho-sanchez-ferlosio/145934?srsltid=AfmBOoq3Hi6hJadnMMDsdSQzN7NzmUjMsLd1pUdXPxnzrJHMUJHZRHgC" target="_blank">Poemas</a>
-            <a href="https://www.abc.es/cultura/abci-muere-anos-poeta-y-cantautor-chicho-sanchez-ferlosio-200307020300-191942_noticia.html?ref=https%3A%2F%2Fwww.google.com%2F" target="_blank">Fallecimiento</a>
+            <div class="navegacion"><a href="https://es.wikipedia.org/wiki/Chicho_S%C3%A1nchez_Ferlosio" target="_blank">Biografía</a></div>
+            <div class="navegacion"><a href="https://www.discogs.com/es/artist/656292-Chicho-S%C3%A1nchez-Ferlosio" target="_blank">Discografía</a></div>
+            <div class="navegacion"><a href="https://www.casadellibro.com/libros-ebooks/chicho-sanchez-ferlosio/145934?srsltid=AfmBOoq3Hi6hJadnMMDsdSQzN7NzmUjMsLd1pUdXPxnzrJHMUJHZRHgC" target="_blank">Poemas</a></div>
+            <div class="navegacion"><a href="https://www.abc.es/cultura/abci-muere-anos-poeta-y-cantautor-chicho-sanchez-ferlosio-200307020300-191942_noticia.html?ref=https%3A%2F%2Fwww.google.com%2F" target="_blank">Fallecimiento</a></div>
         </nav>    
         <article id="biografia">
             <h3>Biografía breve</h3>
             <p>Chicho Sánchez Ferlosio nació en Madrid el 8 de abril de 1940, hijo de la italiana Liliana Ferlosio y del escritor falangista Rafael Sánchez Mazas, siendo el hermano menor de Miguel Sánchez-Mazas Ferlosio (1925), de Rafael Sánchez Ferlosio (1927) y de Gabriela Sánchez Ferlosio. Chicho recibió una educación esmerada y tomó pronto un camino opuesto al de su padre, integrándose en la oposición al régimen de Franco y aplicando su talento poético a la composición de canciones antifranquistas.
                 En 1957 conoció en el Instituto Italiano a Ana Guardione, con la que se casó en 1960. El matrimonio duró hasta 1974. Fruto del matrimonio nacieron cuatro hijos, pero solo sobrevivió uno: Andrés Sánchez Guardione. Los otros murieron por accidentes siendo niños o al nacer.</p>
+            <p>Comenzó a estudiar Ciencias Económicas, Derecho y Filosofía y Letras, carreras que no llegó a terminar. En 1961 publicó el que sería su único libro en vida, Narraciones italianas, con diecinueve narraciones recogidas de la tradición italiana. En 1962, cumplió el servicio militar en el Sahara durante catorce meses, tiempo menor que el habitual al ser padre de un hijo.4​
+
+                En 1964 graba varias de sus canciones en un magnetófono casero y el escritor Alfonso Grosso lleva el casete a Estocolmo (Suecia) donde se publican en el elepé Spanska motståndssånger ("Canciones de la resistencia española"). El nombre de Ferlosio es "silenciado por razones de seguridad" y este anonimato lleva a la creencia popular de que los temas son originarios de la época de la guerra civil. Una de ellas, Gallo rojo, gallo negro, se convirtió en un himno de la lucha contra la dictadura. Algo similar ocurrió con La paloma de la paz. </p>    
         </article>
-        <article>
+        <article id="inicios" >
             <h1>Inicios</h1>
             <p>Chicho se convierte para los cantautores que empezaron a trabajar a finales de los años 1970 en un mito y un amigo fiel, presto a colaborar con quien se lo pidiera. Actuó a menudo con Jesús Munárriz, cantautor antes que poeta y editor, y convenció a Javier Krahe para que se estrenara en los escenarios madrileños. Joaquín Sabina hizo famosa una de sus canciones, Círculos viciosos, por la que Ferlosio demandó en 1981 a las casas discográficas CBS y April Music, vinculadas entre sí, por falsificación de copyright, al aparecer atribuida a Sabina en su disco Malas compañías (1980). Ya en la década de 1990 colabora como letrista con Alberto Pérez en los dos discos que éste dedicó a la música de baile, Sobre la pista (1990) y Tiempo de baile (1999) y canta poemas de Kiko Veneno. </p>
+            <p>En 1978 edita A contratiempo (reeditado en CD en 2007),elepé que reproduce fielmente sus actuaciones en directo, con instrumentación austera pero con un gran talento melódico, y que incluyó algunas de sus canciones más conocidas, como La paloma de la paz y Gallo rojo, gallo negro. </p>
         </article>
         <aside>
-            <img src="chicho.jpeg" alt="Foto de chicho">
+            <img src="chicho.jpeg" alt="Foto de Chicho">
         </aside>
         <aside>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/C7cN0qV60zc?si=Hoo-FcpmPR8ovzyn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </aside>
-        <footer><p>Página relizada por <a href="mailto:julioavello94@iesamchado.org">Julio Avello Ordóñez</a></p> </footer>
+        <footer><p>Página relizada por <a  id="mail" href="mailto:julioavello94@iesamchado.org">Julio Avello Ordóñez</a></p> </footer>
     </main>
 
     
