--- a/Primer trimestre/Artista/artista.html
+++ b/Primer trimestre/Artista/artista.html
@@ -31,11 +31,11 @@
             <p>En 1978 edita A contratiempo (reeditado en CD en 2007),elepé que reproduce fielmente sus actuaciones en directo, con instrumentación austera pero con un gran talento melódico, y que incluyó algunas de sus canciones más conocidas, como La paloma de la paz y Gallo rojo, gallo negro. </p>
         </article>
         <aside>
-            <img src="chicho.jpeg" alt="Foto de Chicho">
+            <p id="pfoto"><img id="fotochicho" src="chicho.jpeg" alt="Foto de Chicho"></p>
+            <p id="pvideo"><iframe width="300" height="390" src="https://www.youtube.com/embed/C7cN0qV60zc?si=Hoo-FcpmPR8ovzyn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
         </aside>
-        <aside>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/C7cN0qV60zc?si=Hoo-FcpmPR8ovzyn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </aside>
+         
+            
         <footer><p>Página relizada por <a  id="mail" href="mailto:julioavello94@iesamchado.org">Julio Avello Ordóñez</a></p> </footer>
     </main>
 
