--- a/Primer trimestre/Artista/artista.html
+++ b/Primer trimestre/Artista/artista.html
@@ -23,12 +23,22 @@
                 En 1957 conoció en el Instituto Italiano a Ana Guardione, con la que se casó en 1960. El matrimonio duró hasta 1974. Fruto del matrimonio nacieron cuatro hijos, pero solo sobrevivió uno: Andrés Sánchez Guardione. Los otros murieron por accidentes siendo niños o al nacer.</p>
             <p>Comenzó a estudiar Ciencias Económicas, Derecho y Filosofía y Letras, carreras que no llegó a terminar. En 1961 publicó el que sería su único libro en vida, Narraciones italianas, con diecinueve narraciones recogidas de la tradición italiana. En 1962, cumplió el servicio militar en el Sahara durante catorce meses, tiempo menor que el habitual al ser padre de un hijo.4​
 
-                En 1964 graba varias de sus canciones en un magnetófono casero y el escritor Alfonso Grosso lleva el casete a Estocolmo (Suecia) donde se publican en el elepé Spanska motståndssånger ("Canciones de la resistencia española"). El nombre de Ferlosio es "silenciado por razones de seguridad" y este anonimato lleva a la creencia popular de que los temas son originarios de la época de la guerra civil. Una de ellas, Gallo rojo, gallo negro, se convirtió en un himno de la lucha contra la dictadura. Algo similar ocurrió con La paloma de la paz. </p>    
+                En 1964 graba varias de sus canciones en un magnetófono casero y el escritor Alfonso Grosso lleva el casete a Estocolmo (Suecia) donde se publican en el elepé Spanska motståndssånger ("Canciones de la resistencia española"). El nombre de Ferlosio es "silenciado por razones de seguridad" y este anonimato lleva a la creencia popular de que los temas son originarios de la época de la guerra civil. Una de ellas, Gallo rojo, gallo negro, se convirtió en un himno de la lucha contra la dictadura. Algo similar ocurrió con La paloma de la paz. </p>
         </article>
         <article id="inicios" >
             <h1>Inicios</h1>
             <p>Chicho se convierte para los cantautores que empezaron a trabajar a finales de los años 1970 en un mito y un amigo fiel, presto a colaborar con quien se lo pidiera. Actuó a menudo con Jesús Munárriz, cantautor antes que poeta y editor, y convenció a Javier Krahe para que se estrenara en los escenarios madrileños. Joaquín Sabina hizo famosa una de sus canciones, Círculos viciosos, por la que Ferlosio demandó en 1981 a las casas discográficas CBS y April Music, vinculadas entre sí, por falsificación de copyright, al aparecer atribuida a Sabina en su disco Malas compañías (1980). Ya en la década de 1990 colabora como letrista con Alberto Pérez en los dos discos que éste dedicó a la música de baile, Sobre la pista (1990) y Tiempo de baile (1999) y canta poemas de Kiko Veneno. </p>
             <p>En 1978 edita A contratiempo (reeditado en CD en 2007),elepé que reproduce fielmente sus actuaciones en directo, con instrumentación austera pero con un gran talento melódico, y que incluyó algunas de sus canciones más conocidas, como La paloma de la paz y Gallo rojo, gallo negro. </p>
+            <p>
+                Y aqui una de mis canciones favoritas de Chicho.
+            </p>
+            
+            <div id="soldados">
+                <audio controls>
+                    <source src="canciondesoldados.mp3">
+                </audio>
+            </div>
+            
         </article>
         <aside>
             <p id="pfoto"><img id="fotochicho" src="chicho.jpeg" alt="Foto de Chicho"></p>
