--- a/Primer trimestre/html/publicidad.html
+++ b/Primer trimestre/html/publicidad.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="publi"><img src="imagenes/bannerpubli.png" alt="lapublicidah"></div>
+    <div id="texto">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
@@ -29,6 +30,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni modi saepe enim, officiis, mollitia sint iure illo ipsam quo repudiandae ex consequuntur deleniti sapiente excepturi? Aut sunt doloribus atque dolores?</p>
+</div>
 
     
 </body>
